--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
       <meta charset="utf-8">
       <link href="css/styles.css" rel="stylesheet" type="text/css" />
@@ -18,6 +18,7 @@
     </div>
 
     <header>
+
     </header>
 
     <main>
@@ -25,7 +26,7 @@
         <div class="flex">
           <img class="photo" src= "img/soul_of_the_frog.jpg">
           <div class="information">
-            <p class="heading">New album out now</p>
+            <h2 class="heading">New album out now</h2>
             <p>Soul of the Frog</p>
             <p>Digital/CD/ 2 x LP</p>
             <a href="#" class="buy">Purchase Album</a>
@@ -37,7 +38,7 @@
         <div class="flex">
           <img class="photo" src= "img/lead_singer.jpg">
           <div class="information">
-            <p class="heading">About the band</p>
+            <h2 class="heading">About the band</h2>
             <p>Photo booth aliquip pinterest meggings. Sapiente commodo wolf put a bird on it fingerstache gentrify, meh polaroid vegan everyday carry.</p>
           </div>
         </div>
