--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     </div>
 
     <header>
-
+    <h1 class="bannerspan1">ACCESSIBLE FROG</h1>
+    <span class="bannerspan2">WE MAKE AWESOME MUSIC</span>
     </header>
 
     <main>
