Added a table, enhanced forms and made some error fixing
Added a table for the tour page

Enhanced the form with some focus states

Removed a couple of errors

--- a/survey.html
+++ b/survey.html
@@ -13,44 +13,50 @@
     <div class="main-nav">
       <ul class="nav">
         <li class="name"><a href="index.html">Accessible Frog</a></li>
-        <li><a href="tour.html">Tour</a></li>
+        <li><a href="tour.html" >Tour</a></li>
         <li><a href="#">Survey</a></li>
       </ul>
     </div>
 
     <header>
+       <h1 class="bannerspan1">ACCESSIBLE FROG</h1>
+       <span class="bannerspan2">we make awesome music</span>
     </header>
 
     <main>
       <h2 class= "heading">Survey</h2>
       <div class="card">
         <div class="flex">
-          <img class="photo" src= "img/concert01.jpg">
+          <img class="photo" src= "img/concert01.jpg" alt="Image of a cheering crowd watching a concert">
           <div class="container">
             <form class = "survey">
+             <fieldset>
+             <legend>What do you like?</legend>
               <p>Who is your favorite band member:</p>
-              <input type="radio" name="res" value="John"> John
-              <input type="radio" name="res" value="Hazzard"> Hazzard
-              <input type="radio" name="res" value="Bob"> Bob
-              <input type="radio" name="res" value="Sally"> Sally
+              <input type="radio" name="res" value="Bob" id="Bob"> <label for="Bob">Bob</label>
+              <input type="radio" name="res" value="Hazzard" id="Hazzard"> <label for="Hazzard">Hazzard</label> 
+              <input  type="radio" name="res" value="John" id="John"> <label for="John">John</label>
+              <input type="radio" name="res" value="Sally" id="Sally">
+              <label for="Sally">Sally</label> 
 
               <p>What is your favorite album:</p>
               <select id="albums" name="select">
-                <option value="1">Party For An Angel</option>
-                <option value="2">A Day Of Old</option>
-                <option value="3">Finding My Shadow</option>
-                <option value="4">Diamond Fireworks</option>
-                <option value="5">Enjoy Your Desire</option>
-                <option value="6">This Is For You</option>
+                <option value="1">A Day Of Old</option>
+                <option value="2">Diamond Fireworks</option>
+                <option value="3">Enjoy Your Desire</option>
+                <option value="4">Finding My Shadow</option>
+                <option value="5">Heroic Forever</option>
+                <option value="6">Midnight Fires</option>
                 <option value="7">Music Of My Life</option>
-                <option value="8">Song For Yesterday</option>
-                <option value="9">Heroic Forever</option>
-                <option value="10">Midnight Fires</option>
-                <option value="11">Street Of The Rider</option>
-              </select>
+                <option value="8">Party For An Angel</option>
+                <option value="9">Song For Yesterday</option>
+                <option value="10">Street Of The Rider</option>
+                <option value="11">This Is For You</option>
+              </select><br>
 
-              <p>What is your favorite song:</p>
-              <textarea></textarea>
+              <label for="favSong">What is your favorite song:</label><br>
+              <textarea id="favSong"></textarea>
+             </fieldset> 
             </form>
           </div>
         </div>
@@ -58,13 +64,16 @@
       <h2 class= "heading">Newsletter</h2>
       <div class="card">
         <div class="flex">
-          <img class="photo" src= "img/the_band.jpg">
+          <img class="photo" src= "img/the_band.jpg" alt="image of the band playing">
             <div class="container">
               <form class="newsletter">
-                  <p>Name: <input type ="text" name="textfield"></p>
-                  <p>Email: <input type ="email" name="textfield"></p>
-                  <p>Retype Email: <input type ="email" name="textfield"></p>
+                <fieldset>
+                  <legend>Sign up for our newsletter!</legend>
+                  <label for="Name">Name: </label><input type ="text" name="textfield" id="Name"><br>
+                  <label id="Email">Email: </label><input type ="email" name="textfield" id="Email"><br>
+                  <label for="retypeEmail">Retype Email: </label><input type ="email" name="textfield" id="retypeEmail"><br>
                   <button type="submit">Sign Up</button>
+                </fieldset>  
               </form>
             </div>
         </div>
