--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 
     <header>
     <h1 class="bannerspan1">ACCESSIBLE FROG</h1>
-    <span class="bannerspan2">WE MAKE AWESOME MUSIC</span>
+    <span class="bannerspan2">we make awesome music</span>
     </header>
 
     <main>
       <div class="card">
         <div class="flex">
-          <img class="photo" src= "img/soul_of_the_frog.jpg">
+          <img class="photo" src="img/soul_of_the_frog.jpg" alt="Cover of the sould of the frog album">
           <div class="information">
             <h2 class="heading">New album out now</h2>
             <p>Soul of the Frog</p>
@@ -37,7 +37,7 @@
 
       <div class="card">
         <div class="flex">
-          <img class="photo" src= "img/lead_singer.jpg">
+          <img class="photo" src= "img/lead_singer.jpg" alt="Image of the lead singer">
           <div class="information">
             <h2 class="heading">About the band</h2>
             <p>Photo booth aliquip pinterest meggings. Sapiente commodo wolf put a bird on it fingerstache gentrify, meh polaroid vegan everyday carry.</p>
@@ -48,9 +48,9 @@
 
     <footer>
       <ul>
-        <li><a href="#" class="social twitter"></a></li>
-        <li><a href="#" class="social youtube"></a></li>
-        <li><a href="#" class="social spotify"></a></li>
+        <li><a href="#" class="social twitter">Twitter link</a></li>
+        <li><a href="#" class="social youtube">Youtube link</a></li>
+        <li><a href="#" class="social spotify">Spotify link</a></li>
       </ul>
       <p class="copyright">Copyright 2015, Accessible Frog</p>
     </footer>
