--- a/tour.html
+++ b/tour.html
@@ -19,23 +19,47 @@
     </div>
 
     <header>
+        <h1 class="bannerspan1">ACCESSIBLE FROG</h1>
+        <span class="bannerspan2">we make awesome music</span>
     </header>
 
     <main >
       <div class="card">
         <div class="flex">
-        <!-- The following images are decorative for this project. -->
-        <!-- Please see the project instructions for information on how to handle these. -->
-          <img class="pick" src= "img/guitar_pick.png" alt="This is a guitar pick">
-          <h2 class= "heading">Tour Dates</h2>
-          <img class="pick" src= "img/guitar_pick.png" alt="This is a guitar pick also">
-          <pre>
-                Date                             Venue                             Location
-                Mar 10 - 12                 The Warfield                  San Francisco, CA
-                Mar 20 - 23                 Pepsi Center                  Denver, CO
-                Apr 2 - 4                      Beacon Theatre             New York City, NY
-                Apr 10                         Paramount Theatre      Seattle, WA
-          </pre>
+          
+    
+          <table>
+            <caption class="heading">Tour Dates</caption>
+            <thead>
+            <tr>
+              <th scope="col">Date</th>
+              <th scope="col">Venue</th>
+              <th scope="col">Location</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+              <td scope="row">Mar 10 - 12</td>
+              <td>The Warfield</td>
+              <td>San Francisco, CA</td>
+            </tr>
+            <tr>
+              <td scope="row">Mar 20 - 23</td>
+              <td>Pepsi Center</td>
+              <td>Denver, CO</td>
+            </tr>
+            <tr>
+              <td scope="row">Apr 2 - 4</td>
+              <td>Beacon Theatre</td>
+              <td>New York City, NY</td>
+            </tr>
+            <tr>
+              <td scope="row">Apr 10</td>
+              <td>Paramount Theatre</td>
+              <td>Seattle, WA</td>
+            </tr>
+            </tbody>
+          </table>
         </div>
       </div>
     </main>
