Added Aria landmarks
Added aria landmarks to improve accessibility on the website

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <div class="main-nav">
+    <div class="main-nav" role="navigation">
       <ul class="nav">
         <li class="name"><a href="#">Accessible Frog</a></li>
         <li><a href="tour.html">Tour</a></li>
@@ -17,12 +17,12 @@
       </ul>
     </div>
 
-    <header>
+    <header role="banner">
     <h1 class="bannerspan1">ACCESSIBLE FROG</h1>
     <span class="bannerspan2">we make awesome music</span>
     </header>
 
-    <main>
+    <main role="main">
       <div class="card">
         <div class="flex">
           <img class="photo" src="img/soul_of_the_frog.jpg" alt="Cover of the sould of the frog album">
@@ -46,7 +46,7 @@
       </div>
     </main>
 
-    <footer>
+    <footer role="contentinfo">
       <ul>
         <li><a href="#" class="social twitter">Twitter link</a></li>
         <li><a href="#" class="social youtube">Youtube link</a></li>
