--- a/tour.html
+++ b/tour.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <div class="main-nav">
+    <div class="main-nav" role="contentinfo">
       <ul class="nav">
         <li class="name"><a href="index.html">Accessible Frog</a></li>
         <li><a href="#">Tour</a></li>
@@ -18,12 +18,12 @@
       </ul>
     </div>
 
-    <header>
+    <header role="banner">
         <h1 class="bannerspan1">ACCESSIBLE FROG</h1>
         <span class="bannerspan2">we make awesome music</span>
     </header>
 
-    <main >
+    <main role="main">
       <div class="card">
         <div class="flex">
           
@@ -64,7 +64,7 @@
       </div>
     </main>
     
-    <footer>
+    <footer role="contentinfo">
       <ul>
         <li><a href="#" class="social twitter"><img src= "img/twitter-32.png"></a></li>
         <li><a href="#" class="social youtube"><img src= "img/youtube-32.png"></a></li>
