Went through validation and accessibility checklists
Added changes and error fixes as I moved through the checklists and
validation of all the files.

--- a/survey.html
+++ b/survey.html
@@ -37,9 +37,9 @@
               <input type="radio" name="res" value="Hazzard" id="Hazzard"> <label for="Hazzard">Hazzard</label> 
               <input  type="radio" name="res" value="John" id="John"> <label for="John">John</label>
               <input type="radio" name="res" value="Sally" id="Sally">
-              <label for="Sally">Sally</label> 
+              <label for="Sally">Sally</label><br>
 
-              <p>What is your favorite album:</p>
+              <label for="albums">What is your favorite album:</label><br>
               <select id="albums" name="select">
                 <option value="1">A Day Of Old</option>
                 <option value="2">Diamond Fireworks</option>
@@ -70,7 +70,7 @@
                 <fieldset>
                   <legend id="signUpLegend">Sign up for our newsletter!</legend>
                   <label for="Name">Name: </label><input type ="text" name="textfield" id="Name"><br>
-                  <label id="Email">Email: </label><input type ="email" name="textfield" id="Email"><br>
+                  <label for="Email">Email: </label><input type ="email" name="textfield" id="Email"><br>
                   <label for="retypeEmail">Retype Email: </label><input type ="email" name="textfield" id="retypeEmail"><br>
                   <button type="submit" aria-describedby="signUpLegend">Sign Up</button>
                 </fieldset>  
@@ -82,9 +82,9 @@
 
     <footer role="contentinfo">
       <ul>
-        <li><a href="#" class="social twitter"><img src= "img/twitter-32.png"></a></li>
-        <li><a href="#" class="social youtube"><img src= "img/youtube-32.png"></a></li>
-        <li><a href="#" class="social spotify"><img src= "img/spotify-32.png"></a></li>
+        <li><a href="#" class="social twitter"><img src= "img/twitter-32.png" alt="twitter icon"></a></li>
+        <li><a href="#" class="social youtube"><img src= "img/youtube-32.png" alt="youtube icon"></a></li>
+        <li><a href="#" class="social spotify"><img src= "img/spotify-32.png" alt="spotify icon"></a></li>
       </ul>
       <p class="copyright">Copyright 2015, Accessible Frog</p>
     </footer>
