--- a/tour.html
+++ b/tour.html
@@ -39,22 +39,22 @@
             </thead>
             <tbody>
             <tr>
-              <td scope="row">Mar 10 - 12</td>
+              <td>Mar 10 - 12</td>
               <td>The Warfield</td>
               <td>San Francisco, CA</td>
             </tr>
             <tr>
-              <td scope="row">Mar 20 - 23</td>
+              <td>Mar 20 - 23</td>
               <td>Pepsi Center</td>
               <td>Denver, CO</td>
             </tr>
             <tr>
-              <td scope="row">Apr 2 - 4</td>
+              <td>Apr 2 - 4</td>
               <td>Beacon Theatre</td>
               <td>New York City, NY</td>
             </tr>
             <tr>
-              <td scope="row">Apr 10</td>
+              <td>Apr 10</td>
               <td>Paramount Theatre</td>
               <td>Seattle, WA</td>
             </tr>
@@ -66,9 +66,9 @@
     
     <footer role="contentinfo">
       <ul>
-        <li><a href="#" class="social twitter"><img src= "img/twitter-32.png"></a></li>
-        <li><a href="#" class="social youtube"><img src= "img/youtube-32.png"></a></li>
-        <li><a href="#" class="social spotify"><img src= "img/spotify-32.png"></a></li>
+        <li><a href="#" class="social twitter"><img src= "img/twitter-32.png" alt="twitter icon"></a></li>
+        <li><a href="#" class="social youtube"><img src= "img/youtube-32.png" alt="youtube icon"></a></li>
+        <li><a href="#" class="social spotify"><img src= "img/spotify-32.png" alt="spotify icon"></a></li>
       </ul>
       <p class="copyright">Copyright 2015, Accessible Frog</p>
     </footer>
