--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main role="main">
       <div class="card">
         <div class="flex">
-          <img class="photo" src="img/soul_of_the_frog.jpg" alt="Cover of the sould of the frog album">
+          <img class="photo" src="img/soul_of_the_frog.jpg" alt="Cover of the soul of the frog album">
           <div class="information">
             <h2 class="heading">New album out now</h2>
             <p>Soul of the Frog</p>
@@ -48,9 +48,9 @@
 
     <footer role="contentinfo">
       <ul>
-        <li><a href="#" class="social twitter">Twitter link</a></li>
-        <li><a href="#" class="social youtube">Youtube link</a></li>
-        <li><a href="#" class="social spotify">Spotify link</a></li>
+        <li><a href="#" class="social twitter"><img src= "img/twitter-32.png" alt="twitter icon"></a></li>
+        <li><a href="#" class="social youtube"><img src= "img/youtube-32.png" alt="youtube icon"></a></li>
+        <li><a href="#" class="social spotify"><img src= "img/spotify-32.png" alt="spotify icon"></a></li>
       </ul>
       <p class="copyright">Copyright 2015, Accessible Frog</p>
     </footer>
